--- a/Meeting Agenda App/Src/App.fx.yaml
+++ b/Meeting Agenda App/Src/App.fx.yaml
@@ -97,9 +97,7 @@ App As appinfo:
             {Value: "క్యాలెండర్"}
         );
         Concurrent(
-            
-            ClearCollect(ColMeetingAgendaLists,MeetingAgendaLists);
-            ClearCollect(
+            /*ClearCollect(
                 AllFutureEvents,
                 Office365Outlook.GetEventsCalendarView(
                     MyCalendarID,
@@ -108,13 +106,13 @@ App As appinfo:
                         DateTimeFormat.UTC
                     ),
                     //Text(
-                    //    DateAdd(
-                     //       Today(),
-                    //        -10,
-                     //       Days
-                     //   ),
-                     //   UTC
-                    //),
+        //    DateAdd(
+        //       Today(),
+        //        -10,
+        //       Days
+        //   ),
+        //   UTC
+        //),
                     Text(
                         DateAdd(
                             Today(),
@@ -134,8 +132,8 @@ App As appinfo:
                         "Canceled:"
                     )
                 )
-            );
-            ClearCollect(
+            );*/
+            /*ClearCollect(
                 AllPastEvents,
                 Office365Outlook.GetEventsCalendarView(
                     MyCalendarID,
@@ -173,7 +171,7 @@ App As appinfo:
                     AllPastEvents,
                     Not(Id in AllFutureEvents.Id)
                 )
-            );
+            );*/
             Set(
                 varShowUpcomingMeeting,
                 true
@@ -187,10 +185,13 @@ App As appinfo:
             Set(
                 MyDomain,
                 Last(
-                    ForAll(Split(
-                        User().Email,
-                        "@"
-                    ), {Result: ThisRecord.Value})
+                    ForAll(
+                        Split(
+                            User().Email,
+                            "@"
+                        ),
+                        {Result: ThisRecord.Value}
+                    )
                 ).Result
             ),
             /*used to determine countdown to end of selected meeting*/
