--- a/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
+++ b/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
@@ -119,7 +119,54 @@
         );
         
         ClearCollect(comboboxAddAgenda,AAAttendees.SelectedItems);
-        Set(IsShow, false)
+        Set(IsShow, false);
+        ClearCollect(
+            MeetingsOnly,
+            Filter(
+                AddColumns(
+                    AllFutureEvents,
+                    "isCurrent",
+                    DateDiff(
+                        Start,
+                        Now(),
+                        TimeUnit.Seconds
+                    ) > 0 && DateDiff(
+                        Now(),
+                        End,
+                        TimeUnit.Seconds
+                    ) > 0
+                ),
+                DateDiff(
+                    Start,
+                    End,
+                    TimeUnit.Hours
+                ) < 6
+            )
+        );
+        Set(
+            NumberOfCurrentMeetings,
+            CountRows(
+                Filter(
+                    MeetingsOnly,
+                    isCurrent
+                )
+            )
+        );
+        /*If a single meeting is happening now, autoselect it*/
+        If(
+            NumberOfCurrentMeetings = 3,
+            Set(
+                AutoSelectMeeting,
+                true
+            );
+            Set(
+                SelectedMeeting,
+                LookUp(
+                    MeetingsOnly,
+                    isCurrent
+                )
+            )
+        );
     Orientation: =If('MeetingDetails Screen'.Width < 'MeetingDetails Screen'.Height, Layout.Vertical, Layout.Horizontal)
     Size: =1 + CountRows(App.SizeBreakpoints) - CountIf(App.SizeBreakpoints, Value >= 'MeetingDetails Screen'.Width)
     Width: =Max(App.Width, App.DesignWidth)
